# Kodama

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  cleanup.app.jsx.md  eslint.config.mjs  index.html  install.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
analytics/: README.md  worker.js  wrangler.toml
docs/: index.html  style.css  versions.html
docs/s/: index.html
e2e/: wdio.browser.conf.cjs  wdio.desktop.conf.cjs
e2e/browser/: smk-01-first-launch.e2e.js
e2e/fixtures/: fake-sidecar.cjs
e2e/scripts/: build-desktop.cjs
e2e/support/: desktop-state.cjs  failure-artifacts.cjs  runtime-controls.cjs  runtime-controls.md  tauri-adapters.cjs  tauri-adapters.md  vite-server.cjs
installer/: install.sh
python-backend/: AGENTS.md  kodama-server-aarch64-apple-darwin.spec  kodama-server-x86_64-pc-windows-msvc.spec  kodama-server-x86_64-unknown-linux-gnu.spec  requirements.txt  run.py  server.old.py  server.py
python-backend/src/: __init__.py  config.py  type_defs.py
python-backend/static/: overlay.html  remote.html
python-backend/tests/: route_test_support.py  test_app_startup.py  test_auth_profiles_routes.py  test_cache_routes.py  test_composer_routes.py  test_credits_cache.py  test_discovery_routes.py  test_downloads_routes.py  test_ffmpeg.py  test_lastfm_routes.py  test_library_routes.py  test_lyrics_routes.py  test_misc_routes.py  test_musixmatch.py  test_operations_routes.py  test_registration.py  test_root_routes.py  test_runtime_launcher.py  test_stream_service.py  test_streaming_routes.py  test_youtube_music_session.py
src/: App.css  App.jsx  OverlayEditorApp.jsx  api.js  bug-diagnostics.js  context.jsx  icons.jsx  index.css  main.js  main.jsx  runtime.js  video-sync.jsx  views.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json  tauri.macos.conf.json
src-tauri/src/: appicon.rs  discord.rs  main.rs  media.rs  server.rs  window.rs
src-tauri/src/audio/: decoder.rs  http_source.rs  mod.rs  player.rs
src-tauri/windows/: hooks.nsh
src/app/: App.jsx  AppOverlays.jsx  AppShell.jsx  DownloadQueueCard.jsx  MainContent.jsx  PlayerOverlay.jsx  PlaylistContextMenu.jsx  QueueDock.jsx  SelectionActionBar.jsx  Sidebar.jsx  TrackContextMenu.jsx  global-keyframes.js  news-modal.jsx  shell-constants.js  startup-screens.jsx
src/bigpicture/: Artist.jsx  BigPicture.jsx  Browse.jsx  Detail.jsx  GamepadTest.jsx  Home.jsx  Keybar.jsx  Lyrics.jsx  NowPlaying.jsx  Search.jsx  TabChrome.jsx  bpContext.js  bpInput.js  bpSounds.js  playerBridge.js  useController.js
src/components/: GenreBar.jsx  MusicCard.jsx  Player.jsx  Sidebar.jsx  TrackRow.jsx
src/e2e/: browser-webview-window.js  noop.js  runtime-controls.js
src/effects/: particle-burst.js
src/locales/: de.json  en.json  pt-BR.json  tok.json
src/lyrics/: fetch.js  parse.js  providers.js
src/modals/: add-to-playlist-modal.jsx  bug-report-modal.jsx  fade-editor-modal.jsx  lyrics-browser-modal.jsx  news-modal.jsx  playlist-modals.jsx  profile-switcher-modal.jsx
src/overlay/: OverlayEditor.jsx  schema.js
src/ui/: remote-control.jsx  rows.jsx  tooltip.jsx  use-accent-color.js  zoomed-heroui.jsx
src/unison/: api.js  identity.js
src/views/: HomeView.jsx  LibraryView.jsx  (+6 more)
tools/: news-editor.html
updates/: latest.json  news.json
(+227 files in other folders)
