[package]
name = "kodama"
version = "1.0.0"
description = "Kodama - YouTube Music Client"
authors = []
license = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell   = "2"
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-http    = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
reqwest           = { version = "0.12", features = ["blocking", "json"] }
url               = "2"
tokio             = { version = "1", features = ["time"] }
discord-rich-presence = "0.2"
rodio      = { version = "0.20", features = ["symphonia-all"] }
symphonia  = { version = "0.5",  features = ["all"] }
rustfft    = "6"
base64     = "0.22"
# OS media controls (Windows SMTC, macOS Now Playing, Linux MPRIS) + media keys.
souvlaki   = "0.7"

[target.'cfg(windows)'.dependencies]
# xcap (bug-report screenshot) doesn't compile on macOS (xcap 0.0.14 macos backend) — Windows only.
xcap = "0.0.14"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
